<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="album"
            type="com.team.vinylos.models.Album" />
    </data>


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AlbumDetailActivity"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="100dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/Theme.Vinylos.PopupOverlay">

                    <TextView
                        android:id="@+id/textview_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{album.name}"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.appcompat.widget.Toolbar>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="70dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:id="@+id/imageAlbum"
                            android:layout_width="132dp"
                            android:layout_height="180dp"
                            app:srcCompat="@drawable/artistslogo_background" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:padding="5dp">



                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewEmailLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/albumGenre"
                                android:textStyle="bold|italic"
                                tools:text="Género" />

                            <TextView
                                android:id="@+id/textViewEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@{album.genre}"
                                tools:text="genero" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewTelephoneLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/albumRecordLabel"
                                android:textStyle="bold|italic"
                                tools:text="@string/albumRecordLabel" />

                            <TextView
                                android:id="@+id/textViewTelephone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@{album.recordLabel}"
                                tools:text="@string/albumRecordLabel" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="5"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewAlbumReleaseDateLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/albumReleaseDate"
                                android:textStyle="bold|italic"
                                tools:text="@string/albumReleaseDate" />

                            <TextView
                                android:id="@+id/textViewAlbumReleaseDate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@{album.releaseDate}"
                                tools:text="@string/albumReleaseDate" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="5"
                            android:orientation="horizontal"
                            android:padding="0dp">

                            <TextView
                                android:id="@+id/textViewAlbumDescriptionLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@string/albumDescription"
                                android:textStyle="bold|italic"
                                tools:text="@string/albumDescription" />

                            <TextView
                                android:id="@+id/textViewAlbumDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="8dp"
                                android:paddingTop="3dp"
                                android:paddingEnd="5dp"
                                android:paddingBottom="2dp"
                                android:text="@{album.description}"
                                tools:text="@string/albumRecordLabel" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="5dp"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/commentButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:background="#1F37BF"
                            android:text="@string/commentAlbumButton" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:itemBackground="@color/blue"
        app:menu="@menu/bottom_navigation_menu" />


</FrameLayout>
</layout>