<resources>
    <string name="app_name">Vinylos</string>
    <string name="albums">Albumes</string>
    <string name="albumList">Listado de álbumes</string>
    <string name="artist">Artistas</string>
    <string name="collectors">Coleccionistas</string>
    <string name="prizes">Premios</string>

    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="gender">Género</string>
    <string name="hello_first_fragment">Vinilos, Tu app de música favorita</string>
    <string name="email">Email</string>
    <string name="phone">Telefono</string>
    <string name="bdate">Nacimiento</string>
    <string name="createAlbumTitle">Crear album</string>
    <string name="createAlbumCommentTitle">Crear comentario</string>
    <string name="createPremioButtonDescription">Crear premio</string>
    <string name="CancelCreatePremioButtonDescription">Cancelar creación del premio</string>
    <string name="albumName">Nombre del álbum</string>
    <string name="albumCommentRating">Calificación</string>
    <string name="albumDescription">Descripción del album</string>
    <string name="albumCommentDescription">Describa su comentario</string>
    <string name="createAlbumButtonDescription">Crear album</string>
    <string name="CancelCreateAlbumButtonDescription">Cancelar creación de album</string>
    <string name="CreateCommentButton">Crear comentario</string>
    <string name="CancelCreateCommentButton">Cancelar creación del comentario</string>

    <string name="albumgenre1">Classical</string>
    <string name="albumgenre2">Salsa</string>
    <string name="albumgenre3">Rock</string>
    <string name="albumgenre4">Folk</string>
    <string name="albumGenre">Género del álbum</string>

    <string name="albumRecordLabel">Productora</string>
    <string name="commentAlbumButton">Comentar</string>
    <string name="albumRecordLabelType1">Sony Music</string>
    <string name="albumRecordLabelType2">EMI</string>
    <string name="albumRecordLabelType3">Discos Fuentes</string>
    <string name="albumRecordLabelType4">Elektra</string>
    <string name="albumRecordLabelType5">Fania Records</string>

    <string name="albumCover">Portada</string>
    <string name="albumReleaseDate">Fecha de lanzamiento</string>

    <string name="createAlbumButton">Crear</string>
    <string name="createAlbumCommentButton">Crear</string>
    <string name="cancelCreateAlbumButton">Cancelar</string>
    <string name="cancelCreateAlbumCommentButton">Cancelar</string>

    <string name="createPrizeTitle">Crear premio</string>
    <string name="prizeName">Nombre del premio</string>
    <string name="prizeDescription">Descripción del premio</string>
    <string name="prizeOrganization">Organización del premio</string>

    <string name="createPrizeButton">Crear</string>
    <string name="cancelCreatePrizeButton">Cancelar</string>
</resources>
