<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/albums"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/albums"/>
    <item
        android:id="@+id/artists"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/artist"/>

    <item
        android:id="@+id/collectors"
        android:enabled="true"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/collectors"/>

    <item
        android:id="@+id/prizes"
        android:checkable="true"
        android:checked="true"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/prizes" />
</menu>